<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DawgBookStore</string>
    <string name="edit_message">Enter a department</string>
    <string name="button_send">Search</string>
    <string name="button_sell">Sell Book</string>
    <string name="button_message">Messages</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">DawgBookStore</string>
    <string name="title_activity_course_list_one">CHEM E Courses</string>
    <string name="hello_world">No Messages</string>
    <string name="title_activity_book_list_one">CHEM E 310</string>
    <string name="title_activity_book_one">Elementary Principles of Chemical Processes, 3rd Ed</string>
    <string name="title_activity_book_list_two">CHEM E 341</string>
    <string name="title_activity_sell_book_page">Sell Book</string>
    <string name="title_activity_message_manager">Messages</string>
	<string name="CourseName">\n Type in Course Name</string>
    <string name="BookName">\n Type in Book Name</string>
    <string name="Cost">\n Type Cost</string>
    <string name="Condition">\n Type Condition</string>
    <string name="Description">\n Type Description</string>
    <string name="Sell">Sell!</string>
    
</resources>