<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background = "#370470"
    android:orientation="vertical" >
    
   <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
	   <EditText android:id="@+id/CourseName"
	   		android:layout_weight="1"
	   		android:layout_width="fill_parent"
	   		android:layout_height="wrap_content"
	   		android:padding="15dip"
	   		android:textColor = "#FFFFFF"
	   		android:hint="@string/CourseName" />
	   
	 </LinearLayout>
	
      <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
	   
          <EditText android:id="@+id/BookName"
	   		android:layout_weight="1"
	   		android:layout_width="fill_parent"
	   		android:layout_height="wrap_content"
	   		android:padding="15dip"
	   		android:textColor = "#FFFFFF"
	   		android:hint="@string/BookName" />
	 	</LinearLayout>
	 	
       <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
	   
          <EditText android:id="@+id/Cost"
	   		android:layout_weight="1"
	   		android:layout_width="fill_parent"
	   		android:layout_height="wrap_content"
	   		android:padding="15dip"
	   		android:textColor = "#FFFFFF"
	   		android:hint="@string/Cost" />
	 	</LinearLayout>
	 	
        <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
	   
          <EditText android:id="@+id/Condition"
	   		android:layout_weight="1"
	   		android:layout_width="fill_parent"
	   		android:layout_height="wrap_content"
	   		android:padding="15dip"
	   		android:textColor = "#FFFFFF"
	   		android:hint="@string/Condition" />
	 	</LinearLayout>
	 	
         <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
	   
          <EditText android:id="@+id/Description"
	   		android:layout_weight="1"
	   		android:layout_width="fill_parent"
	   		android:layout_height="wrap_content"
	   		android:padding="15dip"
	   		android:textColor = "#FFFFFF"
	   		android:hint="@string/Description" />
	 	</LinearLayout>
	 	
        <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
	   
          <Button 
             android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	  		android:layout_gravity="center_horizontal"
	  		android:onClick="sellYourStuff"
	   		android:text="@string/Sell" />
	 	</LinearLayout>
   

 
</LinearLayout>

