<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_splash"
    android:orientation="vertical" >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

	    <EditText
	        android:id="@+id/edit_message"
	        android:layout_width = "fill_parent"
	        android:layout_height = "wrap_content"
	        android:layout_weight="4"
	        android:textSize = "28sp"
	        android:hint="@string/edit_message" 
	        android:textColor ="#ffffff" />
	
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="sendMessage"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/button_send" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n" />
    
    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="goToSell"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/button_sell" />
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

	  
	
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="goToMessage"
	        android:layout_gravity="center_horizontal"

	        android:text="@string/button_message" />
    </LinearLayout>

</LinearLayout>